--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@types/three": "^0.146.0",
     "rxjs": "~7.5.0",
+    "three": "^0.146.0",
+    "three-addons": "^1.2.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
