--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "@types/three": "^0.146.0",
+    "apexcharts": "^3.37.0",
     "chart.js": "^4.2.0",
     "rxjs": "~7.5.0",
     "three": "^0.146.0",
