--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.2.0",
     "@angular/common": "^14.2.0",
     "@angular/compiler": "^14.2.0",
     "@angular/core": "^14.2.0",
@@ -21,15 +20,12 @@
     "@angular/router": "^14.2.0",
     "@types/three": "^0.146.0",
     "apexcharts": "^3.37.0",
-    "chart.js": "^4.2.0",
     "dotenv": "^16.0.3",
     "minio": "^7.0.32",
     "postprocessing": "6.29.1",
     "rxjs": "^7.8.0",
     "three": "^0.146.0",
-    "three-addons": "^1.2.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.7",
@@ -37,6 +33,8 @@
     "@angular/compiler-cli": "^14.2.0",
     "@types/jasmine": "~4.0.0",
     "@types/minio": "^7.0.15",
+    "@types/node": "^18.13.0",
+    "@types/uuid": "^9.0.0",
     "autoprefixer": "^10.4.13",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
