--- a/src/clients/nestjs-seduce-api.yaml
+++ b/src/clients/nestjs-seduce-api.yaml
@@ -1,13 +1,12 @@
 openapi: 3.0.0
 servers:
-  - url: "http://127.0.0.1:3001"
+  - url: 'http://127.0.0.1:3001'
     variables: {}
 info:
   version: 0.0.1
-  title: "Naomesh Seduce NestJS Transform API"
+  title: 'Naomesh Seduce NestJS Transform API'
   description: Specification
-  termsOfService:
-    ""
+  termsOfService: ''
     # Contact information: name, email, URL.
   contact:
     name: API Support
@@ -17,13 +16,13 @@ info:
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
-tags:
+tags: 
   - name: node
     description: everything related to node
 paths:
   /v1/{nodeID}/live-consumption:
     parameters:
-      - $ref: "#/components/parameters/nodeID"
+      - $ref: '#/components/parameters/nodeID'
     get:
       description: It sums PSU 0 and PSU 1
       summary: Get live consumption of node. It sums PSU 0 and PSU 1
@@ -32,13 +31,13 @@ paths:
       tags:
         - node
       responses:
-        "200":
+        '200':
           description: sucessful operation
           content:
             application/json:
-              schema:
+              schema: 
                 type: object
-                properties:
+                properties: 
                   name:
                     type: string
                     example: "Live consumption of node {{nodeID}}"
@@ -48,12 +47,12 @@ paths:
                   data:
                     type: number
                     example: 114.4
-        "404":
+        '404':
           description: invalid node id, not found
 
   /v1/{nodeID}/consumption-diff:
     parameters:
-      - $ref: "#/components/parameters/nodeID"
+      - $ref: '#/components/parameters/nodeID'
     get:
       summary: Get consumption of node
       description: It is in watt
@@ -62,9 +61,9 @@ paths:
           name: step
           schema:
             type: number
-            example: 0.5
-            default: 0.5
-          description: number of seconde, granularity, step
+            example: 500
+            default: 500
+          description: number of ms, granularity, step
         - in: query
           name: from
           schema:
@@ -76,13 +75,13 @@ paths:
       tags:
         - node
       responses:
-        "200":
+        '200':
           description: successful operation
           content:
             application/json:
-              schema:
+              schema: 
                 type: object
-                properties:
+                properties: 
                   name:
                     type: string
                     example: "Consumption of node {{nodeID}} from last {{from}} hours"
@@ -97,7 +96,8 @@ paths:
                     type: array
                     description: array of tuples, first is timestamp and secone is value in watt
                     example:
-                      - - 1675782805000
+                      - 
+                        - 1675782805000
                         - 113.4
                     items:
                       type: array
@@ -105,12 +105,12 @@ paths:
                         type: number
                       maxItems: 2
                       minItems: 2
-
-        "400":
-          description: invalid node id, not found
+                          
+        '400':
+            description: invalid node id, not found
   /v1/{nodeID}/consumption:
     parameters:
-      - $ref: "#/components/parameters/nodeID"
+      - $ref: '#/components/parameters/nodeID'
     get:
       summary: Get consumption of node with historical data
       description: historical data
@@ -119,14 +119,14 @@ paths:
           name: step
           schema:
             type: number
-            example: 0.5
-            default: 0.5
-          description: number of s, granularity, step
-        - in: query
+            example: 500
+            default: 500
+          description: number of ms, granularity, step
+        - in: query 
           name: range # range=1675782805000:1675782805000,1675782806000:1675782906000...
           style: spaceDelimited
           explode: true
-          schema:
+          schema: 
             type: array
             items:
               type: string
@@ -137,13 +137,13 @@ paths:
       tags:
         - node
       responses:
-        "200":
+        '200':
           description: successful operation
           content:
             application/json:
-              schema:
+              schema: 
                 type: object
-                properties:
+                properties: 
                   name:
                     type: string
                     example: "Consumption of node {{nodeID}} from {{from}} hours"
@@ -169,7 +169,8 @@ paths:
                           type: array
                           description: array of tuples, first is timestamp and secone is value in watt
                           example:
-                            - - 1675782805000
+                            - 
+                              - 1675782805000
                               - 113.4
                           items:
                             type: array
@@ -177,10 +178,10 @@ paths:
                               type: number
                             maxItems: 2
                             minItems: 2
-        "400":
+        '400':
           description: invalid node id, not found
 
-  "/v1/live-consumption":
+  '/v1/live-consumption':
     get:
       operationId: getLiveConsumptionOfAllNodes
       description: Get live consumption of all nodes in watt specified by query parameter
@@ -189,7 +190,7 @@ paths:
           name: nodes # nodes=ecotype-25_pdu-Z1.2,ecotype-24_pdu-Z1.2
           style: spaceDelimited
           explode: true
-          schema:
+          schema: 
             type: array
             items:
               type: string
@@ -197,13 +198,13 @@ paths:
               example: ecotype-25_pdu-Z1.2,ecotype-26_pdu-Z1.2
           description: Array of node ids
       responses:
-        "200":
+        '200':
           description: successful operation
           content:
             application/json:
-              schema:
+              schema: 
                 type: object
-                properties:
+                properties: 
                   name:
                     type: string
                     example: "Live consumption of nodes {{nodeID}}"
@@ -213,21 +214,21 @@ paths:
                   data:
                     type: number
                     example: 114.4
-        "404":
+        '404':
           description: Invalid ID supplied
 
-  "/v1/live-production-solar-panels":
+  '/v1/live-production-solar-panels':
     get:
       description: Get production of solar panels
       operationId: getLiveProductionSolarPanels
       responses:
-        "200":
+        '200':
           description: successful operation
           content:
             application/json:
-              schema:
+              schema: 
                 type: object
-                properties:
+                properties: 
                   name:
                     type: string
                     example: "Live production of solar panels"
@@ -237,16 +238,57 @@ paths:
                   data:
                     type: number
                     example: 114.4
+  '/v1/production-solar-panels':
+    get:
+      description: Get production of solar panels
+      operationId: getProductionSolarPanels
+      parameters:
+        - in: query
+          name: from
+          schema:
+            type: integer
+            example: 2
+            default: 2
+          description: Number of hours, from now to get measures
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema: 
+                type: object
+                properties: 
+                  name:
+                    type: string
+                    example: "Production of solar panels from last {{from}} hours"
+                  unit:
+                    type: string
+                    example: "watt"
+                  data:
+                    type: array
+                    description: array of tuples, first is timestamp and secone is value in watt
+                    example:
+                      - 
+                        - 1675782805000
+                        - 113.4
+                    items:
+                      type: array
+                      items:
+                        type: number
+                      maxItems: 2
+                      minItems: 2
 
 components:
   parameters:
     nodeID:
-      name: nodeID
-      in: path
-      description: ID of the node
-      required: true
-      schema:
-        type: string
-        example: "ecotype-25_pdu-Z1.2"
+        name: nodeID
+        in: path
+        description: ID of the node
+        required: true
+        schema:
+          type: string
+          example: "ecotype-25_pdu-Z1.2"
   links: {}
   callbacks: {}
+
+  
