--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "gen_sedcli": "openapi --input ./src/clients/nestjs-seduce-api.yaml --output ./src/clients/seduce --client angular",
-    "gen_webcli": "openapi --input ./src/clients/nestjs-web-api.yaml --output ./src/clients/webapi --client angular"
+    "gen_sedcli": "openapi --input ./src/clients/nestjs-seduce-api.yaml --output ./src/clients/seduce --client angular"
   },
   "private": true,
   "dependencies": {
@@ -23,6 +22,7 @@
     "apexcharts": "^3.37.0",
     "postprocessing": "6.29.1",
     "rxjs": "^7.8.0",
+    "socket.io-client": "^4.6.1",
     "three": "^0.146.0",
     "uuid": "^9.0.0"
   },
