--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "apexcharts": "^3.37.0",
     "postprocessing": "6.29.1",
     "rxjs": "^7.8.0",
-    "socket.io-client": "^4.6.1",
+    "socket.io-client": "4.5.1",
     "three": "^0.146.0",
     "uuid": "^9.0.0"
   },
