--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "rxjs": "^7.8.0",
     "socket.io-client": "4.5.1",
     "three": "^0.146.0",
-    "uuid": "^9.0.0"
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.7",
